<resources>
    <string name="app_name">Task Manager</string>

    <string name="login">Login</string>
    <string name="registerText">Registrazione</string>
    <string name="register">Registrati</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Conferma password</string>
    <string name="admin">Admin</string>
    <string name="signup">Iscriviti</string>
    <string name="logout">Logout</string>
    <string name="wb">Bentornato</string>
    <string name="lorem_30w">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac tortor dolor. Ut pharetra sollicitudin orci quis maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit. "</string>

    <string name="default_notification_channelID">"Canale Default Notifiche"</string>
    <string name="msg_token_fmt">Token: %s</string>


    <string-array name="stati_subtask">
        <item>TODO</item>
        <item>Assigned</item>
        <item>Completed</item>
    </string-array>

    <string-array name="priorita_subtask">
        <item>Nessuna</item>
        <item>Bassa</item>
        <item>Media</item>
        <item>Alta</item>
        <item>URGENTE</item>
    </string-array>

    <string-array name="tipi_utente">
        <item>Developer</item>
        <item>Project Leader</item>
        <item>Project Manager</item>
    </string-array>

    <string-array name="testUsers">
        <item>test</item>
    </string-array>

</resources>